# MemPerf-Pro

./: .gitignore  AllocatorProfiler.pptx  README.md  hashfuncs.hh  libdieharder.info  libmalloc.info  libnumalloc.info  libomalloc.info  memsample.c  mytest.cpp  recordscale.hh  selfmap.hh  shadowmemory.cpp  shadowmemory.hh  spinlock.hh
benchmark/: Makefile  allocation_base_test.cpp  cpu_freq  cpu_freq_test.cpp  micro  micro-benchmark.cpp  system_call_overheads_test.cpp  test.sh
data/: performance and memory.xlsx
ideas/: ideas.txt
libc-2.24/: arena.c  hooks.c  malloc-machine.h  malloc.c  morecore.c
malloc/: Makefile  arena.c  malloc-sysdep.h  malloc.c
paper-OOPSLA/: background.tex  conclusion.tex  data4.xlsx  hoard.tex  memory.tex  (+6 more)
src_light/: CMakeLists.txt  Makefile  allocatingstatus.cpp  allocatingstatus.h  callsite.cpp  callsite.h  definevalues.h  globalstatus.cpp  globalstatus.h  hashfuncs.hh  hashmap.hh  libmallocprof.cpp  libmallocprof.h  memsample.c  memsample.h  memwaste.cpp  memwaste.h  objTable.cpp  objTable.h  objTable2.cpp  objTable2.h  predictor.cpp  predictor.h  predictor.info  programstatus.cpp  programstatus.h  real.cpp  shadowmemory.cpp  shadowmemory.hh  structs.cpp  structs.h  threadlocalstatus.cpp  threadlocalstatus.h  xthreadx.cpp  xthreadx.hh
src_light/info/: libc221.info  libc228.info  libdieharder.info  libhoard.info  libjemalloc.info  libmimalloc.info  libnumalloc.info  libomalloc.info  libtcmalloc.info
src_light/prerun/: libmallochelp.cpp  prerun-hoard
src_light/test/: blackscholes-pthread.cpp  mmapmadvise.cpp  threadTest.cpp
(+361 files in other folders)
